feat: update structure

--- a/docs/Basics/LeetCode/low1-10.md
+++ b/docs/Basics/LeetCode/low1-10.md
@@ -1,7 +1,7 @@
 ---
-id: 00-low-I
+id: low1-10
 title: 📜 Low Level 1 - 10
-slug: /low-I
+slug: /low1-10
 ---
 
 > _A word before is worth two behind._
