feat: update leetcode post

--- a/docs/Basics/LeetCode/low/1-10.md
+++ b/docs/Basics/LeetCode/low/1-10.md
@@ -1,6 +1,6 @@
 ---
 id: low1-10
-title: 📜 Low Level 1 - 10
+title: ☕ 1 - 10
 slug: /low1-10
 ---
 
@@ -10,11 +10,11 @@ slug: /low1-10
 
 <!-- 請回答 1-10000000 這個範圍內，能被3或7整除，並且不能同時被3和7整除的整數數量。 -->
 
-### Description
+- <strong>Description</strong>
 
 > Please Answer the number of integers in the range 1 to 1,000,000 that are divisible by 3 or 7 and not divisible by both 3 and 7.
 
-### Answer
+- <strong>Answer</strong>
 
 ```javascript
 const filterArray = [];
