feat: blog add truncate

--- a/blog/2023-03-19-think-job.md
+++ b/blog/2023-03-19-think-job.md
@@ -8,10 +8,10 @@ author_image_url: https://raw.githubusercontent.com/wuzhe0912/image-save/master/
 tags: [Remote Work, Job]
 ---
 
-<!-- - 遠端工作：2023 年，有機會嘗試全遠端工作，並計畫退出勞保體制，改以海外案件的形式工作。如果無法維持遠端工作，則可能搬回台北，但租屋支出高，居住品質也不盡理想。
+- 遠端工作：2023 年，有機會嘗試全遠端工作，並計畫退出勞保體制，改以海外案件的形式工作。如果無法維持遠端工作，則可能搬回台北，但租屋支出高，居住品質也不盡理想。
 - 個人品牌建立：建立自己的品牌是無法回避的事情，但從何著手仍在思考中。可能會參照身邊的同事，從製作 YouTube 影片開始做起，試著分享一些影片，或先製作一些關於自己領域的影片。
 - 技能提升：今年的一個大目標是，至少能掌握使用 Node.js 做後端，把 MERN 整條技術線完整的點起來。
-- SaaS：希望下半年能夠透過串接 Open AI API，開發一個小型 SaaS，整合自己的技術能力和品牌，共同發揮效益。 -->
+- SaaS：希望下半年能夠透過串接 Open AI API，開發一個小型 SaaS，整合自己的技術能力和品牌，共同發揮效益。
 
 <!--truncate-->
 
