feat: update note

--- a/blog/2023/07-27.md
+++ b/blog/2023/07-27.md
@@ -1,6 +1,6 @@
 ---
-slug: childcare-day1
-title: '伴我同行 - Day 1'
+slug: childcare
+title: '伴我同行'
 author: Pitt Wu
 author_title: Father
 author_url: https://github.com/wuzhe0912
