--- a/blog/2023/12-31.md
+++ b/blog/2023/12-31.md
@@ -1,12 +1,13 @@
 ---
 slug: 2023-year-end-summary
 title: '2023 年末問自己的 40 個問題'
-author: Pitt Wu
-author_title: Frontend Engineer
-author_url: https://github.com/wuzhe0912
-author_image_url: https://raw.githubusercontent.com/wuzhe0912/image-save/master/personal/me-2019-5-2.3u8s3z57t4g0.webp
+authors: wuzhe0912
 tags: [40-Questions, Personal Growth, Year-End Summary]
 ---
+
+2023 年末總結，透過對自己提問，反思自己的成長概況。
+
+<!--truncate-->
 
 ## 1. 今年你做了哪些過去從未嘗試過的事？
 
