--- a/blog/2023/03-19.md
+++ b/blog/2023/03-19.md
@@ -1,10 +1,7 @@
 ---
 slug: think-2023
 title: '2023 進修方向'
-author: Pitt Wu
-author_title: Frontend Engineer
-author_url: https://github.com/wuzhe0912
-author_image_url: https://raw.githubusercontent.com/wuzhe0912/image-save/master/personal/me-2019-5-2.3u8s3z57t4g0.webp
+authors: wuzhe0912
 tags: [Personal Brand, Skill]
 ---
 
