--- a/blog/2024/08-11.md
+++ b/blog/2024/08-11.md
@@ -17,4 +17,6 @@ tags: [Personal Growth]
 
 未來期望能盡量以遠端或混合制工作為主，進而有朝一日能擺脫[特定城市的限制](https://amaca.substack.com/p/how-to-become-a-millionaire-without)。
 
-## Personal Brand
+## Todo List
+
+報名了一門媒體語音課程，強制自己要進行錄影教學(雖然仍先以程式分享為切入點)，一方面是實現費曼學習法，另一方面也是強迫自己跨出舒適圈。
