--- a/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/i18n/en/docusaurus-theme-classic/navbar.json
@@ -11,20 +11,16 @@
     "message": "Blog",
     "description": "Navbar item with label Blog"
   },
-  "item.label.Interview Questions": {
-    "message": "Interview Questions",
-    "description": "Navbar item with label Interview Questions"
+  "item.label.Projects": {
+    "message": "Projects",
+    "description": "Navbar item with label Projects"
   },
-  "item.label.⌨️ Coding": {
-    "message": "⌨️ Coding",
-    "description": "Navbar item with label ⌨️ Coding"
+  "item.label.Notes": {
+    "message": "Notes",
+    "description": "Navbar item with label Notes"
   },
-  "item.label.❓Quiz": {
-    "message": "❓Quiz",
-    "description": "Navbar item with label ❓Quiz"
-  },
-  "item.label.LeetCode": {
-    "message": "LeetCode",
-    "description": "Navbar item with label LeetCode"
+  "item.label.About": {
+    "message": "About",
+    "description": "Navbar item with label About"
   }
 }
