--- a/i18n/pt-BR/docusaurus-theme-classic/navbar.json
+++ b/i18n/pt-BR/docusaurus-theme-classic/navbar.json
@@ -7,36 +7,20 @@
     "message": "Pitt Wu's Story Logo",
     "description": "The alt text of navbar logo"
   },
-  "item.label.About": {
-    "message": "About",
-    "description": "Navbar item with label About"
-  },
   "item.label.Blog": {
     "message": "Blog",
     "description": "Navbar item with label Blog"
   },
-  "item.label.Knowledge": {
-    "message": "Knowledge",
-    "description": "Navbar item with label Knowledge"
+  "item.label.Projects": {
+    "message": "Projetos",
+    "description": "Navbar item with label Projects"
   },
-  "item.label.Experience": {
-    "message": "Experience",
-    "description": "Navbar item with label Experience"
+  "item.label.Notes": {
+    "message": "Notas",
+    "description": "Navbar item with label Notes"
   },
-  "item.label.Coding": {
-    "message": "Coding",
-    "description": "Navbar item with label Coding"
-  },
-  "item.label.LeetCode": {
-    "message": "LeetCode",
-    "description": "Navbar item with label LeetCode"
-  },
-  "item.label.AI": {
-    "message": "AI",
-    "description": "Navbar item with label AI"
-  },
-  "item.label.ShowCase": {
-    "message": "ShowCase",
-    "description": "Navbar item with label ShowCase"
+  "item.label.About": {
+    "message": "Sobre",
+    "description": "Navbar item with label About"
   }
 }
