[Chore][blog] Clean up old blog posts and expand 2024 mid-year reflection
- Remove 2023/03-19 and 2023/07-21 (thin content, merged then dropped)
- Expand 2024/08-11 with project details and life context
- Clean up stale en/ja/zh-tw translations for removed posts

--- a/blog/2024/08-11.md
+++ b/blog/2024/08-11.md
@@ -13,10 +13,36 @@ tags: [Personal Growth]
 
 2023 年末時，因為原本任職遠端職缺的公司業務減少，隨即裁撤前端部門一半的人員，不幸我也是其中一員，不得不重新進入市場尋找下一個飯碗。
 
-最終選定了一個台北公司，並返回台北工作，是的，這是一份沒有提供遠端工作的公司，自然得重回通勤的狀況，隨之而來就是成本的劇增，必須攜帶妻與子重新返回台北租屋生活與工作。
+最終選定了一間台北公司，是的，這是一份沒有提供遠端工作的公司，自然得重回通勤的狀況，隨之而來就是成本的劇增，必須攜帶妻與子重新返回台北租屋生活與工作。
+
+每天單程通勤 30 到 60 分鐘，來回將近兩小時，再加上台北的租屋和育兒開銷，跟之前遠端時期的生活品質相比，落差蠻大的。回到家後基本上也沒什麼餘力做自己的事，多數時間都在顧小孩。
+
+## 技術面
+
+雖然嘴上說沒什麼成長，但回頭整理一下，這半年多還是有碰到一些東西：
+
+### 直播管理系統重構
+
+獨立接手並重構直播後台管理系統，改善操作流程與頁面載入效能。新增即時預覽功能與主播照片縱橫比設定，讓現場營運人員操作更順暢。最終把頁面響應速度提升了 40%。
+
+### 遊戲語音優化
+
+重構遊戲前端語音整合方法，從靜態檔案匯入改為動態檔名獲取。原本新增一組語音檔案要花 1-2 天的開發時間，改完之後縮短到 2 小時左右，效率提升約 90%。也順便建立了標準化流程，讓後續維護的人能自己搞定。
+
+### 元件庫建置
+
+協助重構遊戲後台系統，透過 `Storybook` 建立共用元件庫與開發文件，算是第一次比較完整地跑過元件庫的建置流程。
+
+## Personal Brand
+
+報名了一門媒體語音課程，原本打算強制自己進行錄影教學，結果跟 2023 一樣，又拖延了。兩年了，這個目標依然停在原地，只能說拖延症是真的很頑強。
+
+## 生活
+
+坦白說，這半年最大的感受不是技術上的突破，而是育兒的疲憊。小孩越來越大，需要的注意力和陪伴時間也越來越多，加上通勤消耗的體力，下班後的時間幾乎都被佔滿了。
 
 未來期望能盡量以遠端或混合制工作為主，進而有朝一日能擺脫[特定城市的限制](https://amaca.substack.com/p/how-to-become-a-millionaire-without)。
 
-## Todo List
+## 後記
 
-報名了一門媒體語音課程，強制自己要進行錄影教學(雖然仍先以程式分享為切入點)，一方面是實現費曼學習法，另一方面也是強迫自己跨出舒適圈。
+七月底離開了這間公司，拿到一份全遠端的工作，薪水也更好。算是用半年的通勤換回了一個還不錯的結果。接下來希望能趁著遠端的彈性，把一直拖延的事情真正動起來。
